--- a/todo.org
+++ b/todo.org
@@ -19,8 +19,9 @@ See also https://github.com/technomancy/leiningen/issues
    - [X] Allow disabling of all injected code
    - [X] Activate :test profile in test task
    - [X] Resurrect native deps
+   - [X] Trampoline
    - [X] Allow hooks to provide activate fn to avoid load-time side-effects
-   - [ ] Hook up reply to nrepl for new repl task?
+   - [X] Hook up reply to nrepl for new repl task
    - [ ] Honor hooks declared in plugin jar metadata?
    - [ ] Pass user-level repository auth settings on to pomegranate.
    - [ ] In-process eval-in-project? (possibly post-preview)
@@ -35,7 +36,6 @@ See also https://github.com/technomancy/leiningen/issues
    - [ ] compile (transitive cleaning)
    - [ ] shell wrappers
    - [ ] javac (can we do this without ant?)
-   - [ ] trampoline
 ** Documentation
    - [X] readme
    - [X] plugin guide
