--- a/todo.org
+++ b/todo.org
@@ -25,9 +25,11 @@ See also https://github.com/technomancy/leiningen/issues
    - [ ] Pass user-level repository auth settings on to pomegranate.
    - [ ] Use ordered map for :dependencies and :repositories?
    - [ ] Honor hooks declared in plugin jar metadata?
+   - [ ] Get off snapshots (data.xml, reply)
 ** Other stuff (post-preview)
    - [ ] Investigate issues with :eval-in :classloader and bootclasspath
    - [ ] Address chaining issues in with-profile
+   - [ ] Use pomegranate to dynamically resolve missing "lein new" templates
    - [ ] Install task outside projects
    - [ ] Project middleware
    - [ ] Add :dynamic metadata to clucy (bablien has patches for this)
