--- a/todo.org
+++ b/todo.org
@@ -22,11 +22,14 @@ See also https://github.com/technomancy/leiningen/issues
    - [X] Trampoline
    - [X] Allow hooks to provide activate fn to avoid load-time side-effects
    - [X] Hook up reply to nrepl for new repl task
+   - [X] Look for aliases in project.clj
+   - [X] Get off snapshots (data.xml, reply)
    - [ ] Pass user-level repository auth settings on to pomegranate.
    - [ ] Use ordered map for :dependencies and :repositories?
    - [ ] Honor hooks declared in plugin jar metadata?
-   - [ ] Get off snapshots (data.xml, reply)
 ** Other stuff (post-preview)
+   - [ ] Offline mode
+   - [ ] Project-level profiles (nrepl dep comes from repl profile, etc)
    - [ ] Investigate issues with :eval-in :classloader and bootclasspath
    - [ ] Address chaining issues in with-profile
    - [ ] Use pomegranate to dynamically resolve missing "lein new" templates
