--- a/todo.org
+++ b/todo.org
@@ -28,6 +28,7 @@ See also https://github.com/technomancy/leiningen/issues
    - [ ] Pass user-level repository auth settings on to pomegranate
    - [ ] Use ordered map for :dependencies and :repositories?
    - [ ] Honor hooks declared in plugin jar metadata?
+   - [ ] Look for :java-cmd in project map
 ** Other stuff (post-preview)
    - [ ] Offline mode
    - [ ] Task-level profiles (nrepl dep comes from repl profile, etc)
@@ -38,7 +39,6 @@ See also https://github.com/technomancy/leiningen/issues
    - [ ] Use pomegranate to dynamically resolve missing "lein new" templates
    - [ ] Install task outside projects
    - [ ] Project middleware
-   - [ ] Add :dynamic metadata to clucy (bablien has patches for this)
    - [ ] Non-transitive AOT
    - [ ] Mirror/proxy support, also for search indices
    - [ ] Drop clojars snapshots from default repos
