--- a/todo.org
+++ b/todo.org
@@ -25,12 +25,12 @@ See also https://github.com/technomancy/leiningen/issues
    - [X] Look for aliases in project.clj
    - [X] javac (can we do this without ant?)
    - [X] Get off snapshots (data.xml, reply)
-   - [ ] Pass user-level repository auth settings on to pomegranate
+   - [X] Pass user-level repository auth settings on to pomegranate
    - [ ] Use ordered map for :dependencies and :repositories?
-   - [ ] Honor hooks declared in plugin jar metadata?
    - [ ] Look for :java-cmd in project map
 ** Other stuff (post-preview)
    - [ ] Offline mode
+   - [ ] Honor hooks declared in plugin jar metadata?
    - [ ] Task-level profiles (nrepl dep comes from repl profile, etc)
          Better visibility than either :default profile or associng straight in
    - [ ] Investigate issues with :eval-in :classloader and bootclasspath
