--- a/todo.org
+++ b/todo.org
@@ -27,8 +27,12 @@ See also https://github.com/technomancy/leiningen/issues
    - [X] Get off snapshots (data.xml, reply)
    - [X] Pass user-level repository auth settings on to pomegranate
    - [X] Use ordered map for :dependencies and :repositories?
+   - [X] Project middleware
    - [ ] Look for :java-cmd in project map
    - [ ] Better error messages for misformatted :dependencies/:repositories
+   - [ ] Test top-level :exclusions
+   - [ ] Utility function for plugins to add dependencies
+         Needs to be a no-op if the dep is present, but warn
 ** Other stuff (post-preview)
    - [ ] Offline mode
    - [ ] Honor hooks declared in plugin jar metadata?
@@ -39,7 +43,6 @@ See also https://github.com/technomancy/leiningen/issues
    - [ ] Address chaining issues in with-profile
    - [ ] Use pomegranate to dynamically resolve missing "lein new" templates
    - [ ] Install task outside projects
-   - [ ] Project middleware
    - [ ] Non-transitive AOT
    - [ ] Mirror/proxy support, also for search indices
    - [ ] Drop clojars snapshots from default repos
