--- a/todo.org
+++ b/todo.org
@@ -29,13 +29,13 @@ See also https://github.com/technomancy/leiningen/issues
    - [X] Update new task
    - [X] Switch user-settings to checking :user profile sans project
    - [X] Offline mode
-   - [ ] Fix AOT issues with protocols in nrepl and data.xml
    - [ ] Document subcommands in newnew
    - [ ] Pretty-print pom
    - [ ] Look for :java-cmd in project map
 ** Other stuff (post-preview)
    - [ ] deps :tree and deps :list
    - [ ] Honor hooks declared in plugin jar metadata?
+   - [ ] Show aliases in lein help
    - [ ] Task-level profiles (nrepl dep comes from repl profile, etc)
          Better visibility than either :default profile or associng straight in
    - [ ] Investigate issues with :eval-in :classloader and bootclasspath
