--- a/todo.org
+++ b/todo.org
@@ -5,18 +5,21 @@ See also https://github.com/technomancy/leiningen/issues
 * For 2.0.0
 ** Low-hanging fruit (newbies, try one of these!)
    - [X] Look for :java-cmd in project map
+   - [X] Remove task-specific silent flags in favour of global bit (#473)
+   - [ ] Collapse all :repl-* settings into :repl-options map (#432)
    - [ ] Port arbitrary upgrade functionality from 1.x branch
    - [ ] Document subcommands in newnew
+   - [ ] Move newnew template listing into subtasks (newnew #11)
    - [ ] Suppress stack trace when getting help on non-existent task
-   - [ ] Remove task-specific silent flags in favour of global bit (#473)
-   - [ ] Collapse all :repl-* settings into :repl-options map (#432)
 ** Intermediate
    - [X] Pretty-print pom
    - [X] deps :tree
+   - [X] Use blocking instead of polling for repl task (#433)
    - [ ] Show aliases in lein help (#407)
    - [ ] Use pomegranate to dynamically resolve missing "lein new" templates
-   - [ ] Mirror/proxy support, also for search indices (#281), (#271)
-   - [ ] Use locking instead of polling for repl task (#433)
+         (newnew #12)
+   - [ ] Mirror support (#271)
+   - [ ] Honor mirror for search indices (#281)
    - [ ] Re-enable transitive cleaning for compile
    - [ ] Re-enable shell wrappers
 ** Complex
