Fix JVM_OPTS with spaces, mostly. Closes #565.
Spaces in opts will still break when a space is followed by a dash.
Use :jvm-opts in profiles if you can.

--- a/todo.org
+++ b/todo.org
@@ -6,7 +6,7 @@ See also https://github.com/technomancy/leiningen/issues
 ** preview4
    - [X] Don't re-extract native deps (#535)
    - [X] Make offline profile use dev profile (#514) (LHF)
-   - [ ] Fix $JVM_OPTS (#565)
+   - [X] Fix $JVM_OPTS (#565)
    - [ ] Move lein-newnew plugin into default profile (#540)
    - [ ] Force checking of snapshots (#518) (LHF)
 ** Intermediate
