--- a/todo.org
+++ b/todo.org
@@ -7,7 +7,7 @@ See also https://github.com/technomancy/leiningen/issues
    - [X] Don't re-extract native deps (#535)
    - [X] Make offline profile use dev profile (#514) (LHF)
    - [X] Fix $JVM_OPTS (#565)
-   - [ ] Move lein-newnew plugin into default profile (#540)
+   - [X] Move lein-newnew plugin into default profile (#540)
    - [ ] Force checking of snapshots (#518) (LHF)
 ** Intermediate
    - [X] Pretty-print pom
