--- a/todo.org
+++ b/todo.org
@@ -8,7 +8,7 @@ See also https://github.com/technomancy/leiningen/issues
    - [X] Make offline profile use dev profile (#514) (LHF)
    - [X] Fix $JVM_OPTS (#565)
    - [X] Move lein-newnew plugin into default profile (#540)
-   - [ ] Force checking of snapshots (#518) (LHF)
+   - [X] Force checking of snapshots (#518) (LHF)
 ** Intermediate
    - [X] Pretty-print pom
    - [X] deps :tree
