--- a/todo.org
+++ b/todo.org
@@ -3,6 +3,18 @@ Leiningen TODOs
 See also https://github.com/technomancy/leiningen/issues
 
 * For 2.0.0
+** 2.0.0-final
+   - [ ] Address gpg agent issues (#615)
+   - [ ] Startup performance regression (#614)
+   - [ ] Stale directory clutter (#589)
+   - [ ] Allow jars to be signed, document in deploying guide. (#519)
+   - [ ] Isolate target dir per profile (#468)
+   - [ ] Address chaining issues in with-profile (#632)
+   - [ ] Mirror support (#271)
+   - [ ] Honor mirror for search indices (#281)
+   - [ ] Reduce Aether verbosity (#610)
+   - [ ] Improve speed of trampoline restarts (#573)
+   - [ ] Drop clojars snapshots from default repos (#241)
 ** preview4
    - [X] Don't re-extract native deps (#535)
    - [X] Make offline profile use dev profile (#514) (LHF)
@@ -16,23 +28,6 @@ See also https://github.com/technomancy/leiningen/issues
    - [X] Show aliases in lein help (#407)
    - [X] Use pomegranate to dynamically resolve missing "lein new" templates
          (newnew #12)
-   - [ ] Mirror support (#271)
-   - [ ] Honor mirror for search indices (#281)
-   - [ ] Re-enable transitive cleaning for compile (#516)
-** Complex
-   - [ ] Post-install scripts? (#517)
-   - [ ] Allow jars to be signed. (#519)
-   - [ ] Calculate web of trust for signed dependencies.
-   - [ ] Prevent multiple versions of artifacts from getting added (#420)
-   - [ ] Auto-clean predicates (profile switching, etc) (#468)
-   - [ ] Honor hooks declared in plugin jar metadata? (#401)
-   - [ ] Task-level profiles (nrepl dep comes from repl profile, etc) (#520)
-         Better visibility than either :default profile or associng straight in
-   - [ ] Investigate issues with :eval-in :classloader and bootclasspath
-         Need to ensure we're able to put Clojure on the bootstrap classpath
-   - [ ] Address chaining issues in with-profile
-   - [ ] Non-transitive AOT
-   - [ ] Drop clojars snapshots from default repos (#241)
 ** Documentation
    - [X] readme
    - [X] plugin guide
@@ -40,8 +35,7 @@ See also https://github.com/technomancy/leiningen/issues
    - [X] hacking guide (moved to leiningen-core readme)
    - [X] migration guide
    - [X] sample project.clj
-   - [ ] deploy guide
-   - [ ] document adding javadoc/java source as deps
+   - [X] deploy guide
 ** Changes for preview release
    - [X] Finish designing and implement profiles
    - [X] Dynamic recalculating of classpath via pomegranate
