Move task chaining to do task. Fixes #632.

--- a/todo.org
+++ b/todo.org
@@ -4,12 +4,12 @@ See also https://github.com/technomancy/leiningen/issues
 
 * For 2.0.0
 ** 2.0.0-final
+   - [X] Address chaining issues in with-profile (#632)
    - [ ] Address gpg agent issues (#615)
    - [ ] Startup performance regression (#614)
    - [ ] Stale directory clutter (#589)
    - [ ] Allow jars to be signed, document in deploying guide. (#519)
    - [ ] Isolate target dir per profile (#468)
-   - [ ] Address chaining issues in with-profile (#632)
    - [ ] Mirror support (#271)
    - [ ] Honor mirror for search indices (#281)
    - [ ] Reduce Aether verbosity (#610)
