Plumb through mirror support to pomegranate. Fixes #271.
Won't actually be visible until pomegranate is bumped to 0.0.13.

--- a/todo.org
+++ b/todo.org
@@ -14,10 +14,11 @@ See also https://github.com/technomancy/leiningen/issues
    - [X] Address gpg agent issues (#615)
    - [X] Stale directory clutter (#589)
    - [X] Fix de-dupe with :classifier/:extension (#645)
+   - [X] Check project for :scm (#640)
+   - [X] Mirror support (#271)
    - [ ] Allow jars to be signed, document in deploying guide. (#519)
-   - [ ] Mirror support (#271)
-   - [ ] Warn when <scm> isn't in pom (#641)
-   - [ ] Check project for :scm (#640)
+   - [ ] Fix javac to abort on failure (#658)
+   - [ ] Only look up repo credentials when necessary (#657)
 ** preview4
    - [X] Don't re-extract native deps (#535)
    - [X] Make offline profile use dev profile (#514) (LHF)
