--- a/todo.org
+++ b/todo.org
@@ -16,9 +16,9 @@ See also https://github.com/technomancy/leiningen/issues
    - [X] Fix de-dupe with :classifier/:extension (#645)
    - [X] Check project for :scm (#640)
    - [X] Mirror support (#271)
+   - [X] Only look up repo credentials when necessary (#657)
    - [ ] Allow jars to be signed, document in deploying guide. (#519)
    - [ ] Fix javac to abort on failure (#658)
-   - [ ] Only look up repo credentials when necessary (#657)
 ** preview4
    - [X] Don't re-extract native deps (#535)
    - [X] Make offline profile use dev profile (#514) (LHF)
