Allow successive eval-in-project calls with trampoline. Fixes #665.

--- a/todo.org
+++ b/todo.org
@@ -4,10 +4,9 @@ See also https://github.com/technomancy/leiningen/issues
 
 * For 2.0.0
 ** 2.0.0-final
-   - [ ] Implement add-profiles task (#661)
-   - [ ] Allow trampoline to work with chaining in do task (#665)
-   - [ ] Reduce Aether verbosity (#610)
+   - [X] Allow trampoline to work with chaining in do task (#665)
    - [ ] Improve speed of trampoline restarts (#573)
+   - [ ] Reduce Aether verbosity (#610)
    - [ ] Isolate target dir per profile (#468)
    - [ ] Honor mirror for search indices (#281)
    - [ ] Drop clojars snapshots from default repos (#241)
