Improve error message when plugin isn't found.

--- a/todo.org
+++ b/todo.org
@@ -7,8 +7,11 @@ See also https://github.com/technomancy/leiningen/issues
    - [ ] Recover from interrupted self-install (#719)
    - [ ] Honor :local-repo in trampoline (#695)
    - [ ] Improve speed of trampoline restarts (#573)
+   - [ ] Calculate trampoline classpath based on project at time of eval-in-project.
+   - [ ] Reduce verbosity of Aether. (#610)
    - [ ] Isolate target dir per profile (#468)
    - [ ] Honor mirror for search indices (#281)
+   - [ ] Allow search queries on any field. (#243)
    - [ ] Drop clojars snapshots from default repos (#241)
 ** 2.0.0-preview8
    - [X] Allow trampoline to work with chaining in do task (#665)
