--- a/todo.org
+++ b/todo.org
@@ -20,8 +20,8 @@ See also https://github.com/technomancy/leiningen/issues
    - [X] OOM in repl with lots of output (#691)
    - [X] Search indices on Central have moved (#683)
    - [X] Better error messages on failed repl :connect (#723)
+   - [X] Document key generation (#721)
    - [-] Honor hooks/metadata in from plugins (#401)
-   - [ ] Document key generation (#721)
 ** 2.0.0-preview7
    - [X] Address chaining issues in with-profile (#632)
    - [X] Address gpg agent issues (#615)
