Switch :repositories to vector format to preserve ordering.
See http://librelist.com/browser/leiningen/2012/8/17/ordering-issues-with-repositories/
for motivation.

--- a/todo.org
+++ b/todo.org
@@ -5,10 +5,11 @@ See also https://github.com/technomancy/leiningen/issues
 * For 2.0.0
 ** 2.0.0-final
    - [ ] Reduce verbosity of Aether. (#610)
-   - [ ] Isolate target dir per profile (#468)
+   - [ ] Global offline flag. (#687)
    - [ ] Honor mirror for search indices (#281)
    - [ ] Allow search queries on any field. (#243)
    - [ ] Drop clojars snapshots from default repos (#241)
+   - look at http://nullprogram.com/blog/2011/11/06/ ?
 ** 2.0.0-preview9
    - [X] Fast trampolining
    - [X] Latest newnew
